--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.171",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
