--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@types/lodash": "^4.14.171",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^3.0.3",
+    "react-dom": "17.0.2",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "@types/react-simple-maps": "^1.0.5",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
