Edit page layout

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.171",
+    "antd": "^4.16.6",
     "axios": "^0.21.1",
     "chart.js": "^3.4.1",
     "moment": "^2.29.1",
