--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
+    "next-themes": "0.0.15",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.3",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-simple-maps": "^2.3.0",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
