--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-select": "^4.3.1",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.21",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
+    "@types/react-select": "^4.0.17",
     "@types/react-simple-maps": "^1.0.5",
     "autoprefixer": "^10.2.6",
     "eslint": "7.30.0",
