--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@types/faker": "^5.5.7",
     "@types/lodash": "^4.14.171",
-    "antd": "^4.16.6",
     "axios": "^0.21.1",
     "chart.js": "^3.4.1",
     "faker": "^5.5.3",
@@ -24,8 +23,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-simple-maps": "^2.3.0",
-    "react-tooltip": "^4.2.21",
-    "use-dark-mode": "^2.3.1"
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
