--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "models/user.js", "src/pages/test.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "models/user.js", "src/pages/test.js", "src/components/provider/authProvider.jsx"],
   "exclude": ["node_modules"]
 }
