--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-simple-maps": "^2.3.0",
-    "react-tooltip": "^4.2.21"
+    "react-tooltip": "^4.2.21",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
