--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "chart.js": "^3.4.1",
     "faker": "^5.5.3",
+    "firebase": "^8.7.1",
+    "firebase-admin": "^9.10.0",
     "moment": "^2.29.1",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
