--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.2.0",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.21",
+    "swr": "^0.5.6",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
